# sora-python-sdk-examples

./: .env.example  .env.template  .gitignore  CHANGES.md  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: e2e-test.yml
hideface_sender/: hideface_sender.py
messaging_recvonly/: messaging_recvonly.py
messaging_sendonly/: messaging_sendonly.py
messaging_sendrecv/: messaging_sendrecv.py
recvonly/: recvonly.py
sendonly/: sendonly.py
src/: media_sendonly.py
src/hideface_sender/: hideface_sender.py
src/media/: recvonly.py  sendonly.py
src/messaging/: __init__.py  recvonly.py  sendonly.py  sendrecv.py
src/ml/: hideface_sender.py
tests/: test_media_recvonly.py  test_media_sendonly.py
