[project]
name = "sora-sdk-samples"
version = "2024.1.0"
description = "Sora Python SDK Samples"
authors = [{ name = "Shiguredo Inc." }]
dependencies = [
    "opencv-python~=4.9.0.80",
    "opencv-python-headless~=4.9.0.80",
    "sounddevice~=0.4.6",
    "sora_sdk>=2024.1.0",
    "mediapipe~=0.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
media_sendonly = "sora-sdk-samples.media.sendonly:main"
media_recvonly = "sora-sdk-samples.media.recvonly:main"
messaging_sendrecv = "sora-sdk-samples.messaging.sendrecv:main"
messaging_sendonly = "sora-sdk-samples.messaging.sendonly:main"
messaging_recvonly = "sora-sdk-samples.messaging.recvonly:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.2.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/media", "src/messaging"]

[tool.ruff]
line-length = 100
indent-width = 4
