[project]
name = "sora-python-sdk-samples"
version = "2024.1.0"
description = "Sora Python SDK Samples"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
dependencies = [
    "opencv-python~=4.9.0.80",
    "opencv-python-headless~=4.9.0.80",
    "sounddevice~=0.4.6",
    "sora_sdk>=2024.1.0",
    "mediapipe~=0.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

dev-dependencies = [
    "ruff>=0.1.14",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# XXX: source ではない気がする
packages = ["source"]

[tool.ruff]
line-length = 100
indent-width = 4