[project]
name = "sora-sdk-examples"
version = "2024.1.0"
description = "Sora Python SDK Examples"
authors = [{ name = "Shiguredo Inc." }]
license = { file = "LICENSE" }
dependencies = [
    "opencv-python>=4.10.0.84",
    "opencv-python-headless>=4.10.0.84",
    "sounddevice>=0.4.7",
    "sora-sdk~=2024.3.0",
    "mediapipe>=0.10.14",
    "python-dotenv>=1.0.1",
    "numpy>=2.0.1",
    "pillow>=10.4.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false
managed = true
dev-dependencies = ["ruff", "mypy", "pytest"]
python-preference = "only-managed"

[tool.ruff]
target-version = "py310"
line-length = 100
